--- a/index.html
+++ b/index.html
@@ -1,13 +1,16 @@
-<!doctype html>
+<!DOCTYPE html>
 <html lang="en">
   <head>
     <meta charset="UTF-8" />
-    <link rel="icon" type="image/svg+xml" href="/vite.svg" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
-    <title>web-resume-app</title>
+    <title>William Balduf | Web Resume</title>
+    <meta name="description" content="Interactive web resume and portfolio for Billy Balduf — Data Science & MIS student at WPI." />
   </head>
+
   <body>
     <div id="root"></div>
+
+    <!-- This script mounts your React app -->
     <script type="module" src="/src/main.tsx"></script>
   </body>
 </html>
